Fix editor panel is too large for smaller screens

--- a/client/src/containers/Editor/Editor.scss
+++ b/client/src/containers/Editor/Editor.scss
@@ -2,7 +2,7 @@
   background-color: $body-bg;
   z-index: 2;
   position: absolute;
-  height: calc(100vh - #{$toolbar-total-height}); // Safari fix for scroll, should be better fix
+  height: calc(100% - #{$toolbar-total-height}); // Safari fix for scroll, should be better fix
   left: 0;
 
   @include media-breakpoint-up(lg) {
